# liveplay

./: .gitignore  .npmrc  CODE_REVIEW.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-release.yml  build-server.yml  check-client.yml  deploy-docs.yml
client/: README.md  nuxt.config.ts  package.json  vitest.config.ts
client/app/: app.vue
client/app/components/: AboutModal.vue  ActiveCueItem.vue  AudioImportModal.vue  CartPlayer.vue  CartSlot.vue  ConnectionLostModal.vue  MainWorkspace.vue  PlaybackControls.vue  PlaylistItem.vue  PlaylistView.vue  ProjectHeader.vue  ProjectSettingsModal.vue  PropertiesPanel.vue  TransportButtons.vue  WaveformTrimmer.vue  WebShareModal.vue  WelcomeScreen.vue  X18View.vue
client/electron/: main.js  preload.js  web-share.js
client/locales/: de.json  en.json
client/test/: projectDiff.test.ts
deploy/: Caddyfile  Dockerfile  Dockerfile.caddy  README.md  docker-compose.mode-a-caddy.yml  docker-compose.mode-b.yml  nginx.conf
deploy/traefik/: docker-compose.snippet.yml  liveplay-dynamic.yml
deploy/vps-wireguard/: docker-compose.yml  liveplay.mac.conf  traefik-dynamic.yml  wg0.vps.conf
docs/: debugging-mac.md  test-build-release-mac.md  web-client-hosting-auftrag.md  web-hosting-inapp-mac.md  web-hosting-vps-wireguard.md  web-hosting.md  web-sharing-stable-url.md
docs-site/: README.md
scripts/: build-all.js  ensure-server.js
server/: CMakeLists.txt  README.md  vcpkg.json
server/tests/: CMakeLists.txt  test_fs_sandbox.cpp  test_ltc_generator.cpp  test_main.cpp  test_osc_client.cpp
(+25 files in other folders)
